using UnityEngine;

public static class GameSession
{
    public static LevelID currentLevel;
    public static int lastRandomIndex = -1;
}
